--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ torchvision = "0.14.0"
 scikit-learn = "^1.3.0"
 matplotlib = "^3.7.3"
 opencv-python = "^4.8.0.76"
+torchsummary = "^1.5.1"
+pytorch-lightning = "^2.0.8"
+segmentation-models-pytorch = "^0.3.3"
+torchmetrics = "^1.1.2"
+mlflow = "^2.7.0"
+pylint = "^2.17.5"
+mypy = "^1.5.1"
 
 
 [build-system]
