--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ torchmetrics = "^1.1.2"
 mlflow = "^2.7.0"
 pylint = "^2.17.5"
 mypy = "^1.5.1"
+tensorboard = "^2.14.0"
+tensorboardx = "^2.6.2.2"
 
 
 [build-system]
